# RemoShot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
remoshot-client/: Cargo.toml  Info.plist
remoshot-client/src/: capture.rs  config.rs  connection.rs  log_buffer.rs  main.rs  permission.rs  single_instance.rs  tray.rs
remoshot-client/ui/: app.slint
remoshot-common/: Cargo.toml
remoshot-common/src/: lib.rs
remoshot-server/: Cargo.toml
remoshot-server/src/: cleanup.rs  http.rs  main.rs  secret.rs  state.rs  ws.rs
