[package]
name = "remoshot-client"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
remoshot-common = { path = "../remoshot-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
screenshots = "0.8"
tray-icon = "0.19"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
url = "2"
slint = "1.15"
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
slint-build = "1.15"
