[package]
name = "remoshot-client"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
remoshot-common = { path = "../remoshot-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = [
    "connect", 
    "handshake", 
    "rustls-tls-native-roots"
] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
screenshots = "0.8"
tray-icon = "0.21"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
url = "2"
slint = "1.15"
chrono = { version = "0.4", features = ["clock"] }
fs2 = "0.4"
auto-launch = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

[build-dependencies]
slint-build = "1.15"

[package.metadata.packager]
product-name = "RemoShot"
identifier = "tech.bobliu.remoshot"
formats = ["app"]

[package.metadata.packager.macos]
minimum-system-version = "10.13"
info-plist-path = "./Info.plist"