[package]
name = "remoshot-common"
version.workspace = true
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"] }