[package]
name = "remoshot-server"
version.workspace = true
edition = "2024"

[dependencies]
remoshot-common = { path = "../remoshot-common" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
futures-util = "0.3"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
rmp-serde = "1.3"
rand = "0.8"
hex = "0.4"
